--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="img-div">
 
-                <img src="./images/chess.png" alt="starter" class="game-img">
+                <img src="chess.png" alt="starter" class="game-img">
 
             </div>
 
